--- a/3-InstruccionSwitch/InstruccionSwitch-08.html
+++ b/3-InstruccionSwitch/InstruccionSwitch-08.html
@@ -38,12 +38,13 @@
    	
 		<form class=" animated bounceInLeft FormIngreso">
 				<h1>Elija un destino</h1>
-					<select id ="txtIdDestino">
+			<!----		<select id ="txtIdDestino">
 					<option value="Bariloche">Bariloche</option>
 					<option value="Cataratas">Cataratas</option>
 					<option value="Mar del plata">Mar del plata</option>
 					<option value="Ushuaia">Ushuaia</option>
-				</select>
+				</select> -->
+				<input type="text"  id="txtIdDestino" placeholder="Ingrese destino">
 			<a  class="MiBotonUTNnav"  onclick="mostrar()" >Mostrar  informaci&oacute;n</a>
 			
 	</form>				
